* task: fix position of message "searchword too short"
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/ke_search/trunk@88531 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/res/ke_search_pi1.css
+++ b/res/ke_search_pi1.css
@@ -303,6 +303,9 @@ div.kesearchbox{
 #kesearch_results .result-list-item .result-title {
 	font-size:18px;
 }
+#kesearch_results {
+	clear:both;
+}
 #kesearch_results .result-list-item .result-teaser {
 	color:#707070;
 }
